2007-05-18  Nathan Sidwell  <nathan@codesourcery.com>

	* objcopy.c (strip_main): Detect identical input and output file
	names.
	(copy_main): Refactor tempname detection and use.

2007-05-17  Nick Clifton  <nickc@redhat.com>

	* objdump.c (load_debug_section): Select bias for DWARF debug
	addresses based on the flavour of the bfd.

2007-05-11  Alan Modra  <amodra@bigpond.net.au>

	PR 4479
	* objcopy.c (copy_object): Don't copy ELF program headers for
	--only-keep-debug.

2007-05-11  Alan Modra  <amodra@bigpond.net.au>

	* embedspu.sh (find_prog): Prefer prog in same dir as embedspu
	over one found on the users path.
	(main): Generate .reloc for each R_SPU_PPU* reloc.

2007-04-28  Alan Modra  <amodra@bigpond.net.au>

	* prdbg.c (tg_variable): Adjust for changed demangler.
	(tg_start_function): Likewise.

2007-04-27  Alan Modra  <amodra@bigpond.net.au>

	* bucumm.h: Split off host dependencies to..
	* sysdep.h: ..here.
	Many files: Include sysdep.h.  Remove duplicate headers and reorder.
	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2007-04-24  Nick Clifton  <nickc@redhat.com>

	* srconv.c (walk_tree_type_1): Initialise dpt.dunno.

2007-04-24  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>

	* objcopy.c (filter_symbols): Explicitly stripping a symbol
	used in relocations is an error.
	Retype 'keep' to bfd_boolean.

2007-04-24  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2007-04-20  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>
	    Thomas de Lellis <tdel@windriver.com>

	* objcopy.c (reverse_bytes):  New variable.
	(command_line_switch, copy_main):  Add OPTION_REVERSE_ENDIAN.
	(copy_options, copy_usage):  Add "reverse-bytes" entry.
	(copy_section):  Reverse bytes within output sections.
	* doc/binutils.texi:  Document new objcopy option.

2007-04-20  Nick Clifton  <nickc@redhat.com>
