@@ -1,0 +1,6 @@
+	nop
+	nop
+	nop
+	nop
+	b	target
+	b	target+16
